[gd_scene load_steps=5 format=2]

[ext_resource path="res://props/Interactable.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 11.0

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[node name="Interactable" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="Obstacle" type="StaticBody2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Obstacle"]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="MenuTail" type="Polygon2D" parent="."]
visible = false
use_parent_material = true
position = Vector2( 0, -24 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -8, 0, 0, 8, 8, 0 )

[node name="Menu" type="PanelContainer" parent="MenuTail"]
material = SubResource( 3 )
margin_left = -32.0
margin_top = -16.0
margin_right = 32.0
margin_bottom = 3.0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 19 )

[node name="Actions" type="VBoxContainer" parent="MenuTail/Menu"]
use_parent_material = true
margin_left = 4.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 15.0

[node name="1" type="ToolButton" parent="MenuTail/Menu/Actions"]
use_parent_material = true
margin_right = 56.0
margin_bottom = 11.0
text = "Open"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
